--- a/myCSS.css
+++ b/myCSS.css
@@ -20,7 +20,7 @@ body
 		direction:rtl;
 		text-indent:20cm;
 		text-align:left;
-		
+		text-shadow:5px 5px 2px black;
 	}
 	p.new
 	{
@@ -29,4 +29,25 @@ body
 		font-weight:100;
 		direction:rtl;
 		text-align:left;
+		text-decoration:line-through;
+		text-transform:capitalize;
+		text-shadow:5px 5px 8px red;
+		
 	}
+
+	.new1
+	{
+		text-decoration:line-through;
+		text-transform:capitalize;
+		text-shadow:5px 5px 8px red;
+		border-top-style:dashed;
+		border-right-style:solid;
+		border-bottom-style:dotted;
+		border-left-style:solid;
+		border-width:2px 10px 4px 20px;
+		border-color:red green blue white;
+		background-color:lightgrey;
+	}
+	  
+	
+	
