--- a/myCSS.css
+++ b/myCSS.css
@@ -33,6 +33,7 @@ body
 		text-transform:capitalize;
 		text-shadow:5px 5px 8px red;
 		
+				
 	}
 
 	.new1
@@ -47,7 +48,74 @@ body
 		border-width:2px 10px 4px 20px;
 		border-color:red green blue white;
 		background-color:lightgrey;
+		margin-left:100;
+		margin-top:100;	
 	}
-	  
 	
+	.new2
+	{
+		width:300px;		
+		margin:auto;
+		border:dashed;
+		padding-top:50px;
+		padding-right:50px;
+		padding-left:50px;
+		padding-bottom:50px;
+		background-color:white;
+	}
 	
+	.new3
+	{
+		width:300px;
+		padding:25px;
+		border:20px solid green;
+		margin:25px;
+		display:block;
+	}  
+	
+	li
+	{
+		display:block;
+	}
+	span
+	{
+		display:block;
+	}
+	
+	span.a
+	{
+		display:inline;
+		width:100px;
+		height:100px;
+		padding:5px;
+		border:1px solid blue;
+		background-color:yellow;
+	}
+
+	span.b
+	{
+		display:inline-block;
+		width:100px;
+		height:100px;
+		padding:5px;
+		border:1px solid blue;
+		background-color:yellow;
+	}
+	
+	span.c
+	{
+		display:block;
+		width:100px;
+		height:100px;
+		padding:5px;
+		border:1px solid blue;
+		background-color:yellow;
+	}
+
+	a
+	{
+		text-decoration:underline;
+		background-color:green;
+		border-width:2px;
+		
+	}
