--- a/myCSS.css
+++ b/myCSS.css
@@ -112,10 +112,127 @@ body
 		background-color:yellow;
 	}
 
-	a
+	a:hover
 	{
 		text-decoration:underline;
 		background-color:green;
 		border-width:2px;
-		
+	}
+
+	a:active
+	{
+		text-decoration:underline;
+		background-color:blue;
+		border-width:2px;
+	}
+
+	a:visited
+	{
+		text-decoration:underline;
+		border-width:2px;
+	}
+	
+	a:link
+	{
+		text-decoration:underline;
+		border-width:2px;
+	}
+
+	
+	div.a
+	{
+		background-image:linear-gradient(green,blue);
+		height:100;
+		padding:20;
+		margin:auto;
+	}
+	
+	div.b
+	{
+		background-color:white;
+		margin:auto;
+		height:70;
+		opacity:0.5
+	}
+
+	div.c
+	{
+		background-image:radial-gradient(yellow,blue);
+		height:50;
+		padding:20;
+		margin:auto;
+	}
+
+	div.d
+	{
+		background-image:linear-gradient(to right,red,orange,yellow,green,blue,indigo,violet);
+		height:100;
+		padding:20;
+		margin:auto;
+	}
+
+	h2::before
+	{
+		content:url(/home/6CSE1/index.jpeg);
+	}
+	
+	::selection
+	{
+		color:red;
+		background:blue;
+	}
+
+	div.e
+	{
+		width:250px;
+		height:180px;
+		background-image:url(/home/6CSE1/index.jpeg);
+		transition:width 2s, height 4s,transform 2s;
+	}
+	
+	div.e:hover
+	{
+		width:850px;
+		height:300px;
+		transform:rotate(1440deg);
+	}
+
+	div.f
+	{
+		width:100px;
+		height:100px;
+		background-color:red;
+		animation-name:example;
+		animation-duration:20s;
+	}
+	@keyframes example
+	{
+		from{background-color:red;}
+		to{background-color:blue;}
+	}
+
+
+	div.gallery 
+	{
+  		margin: 5px;
+ 		border: 1px solid #ccc;
+  		float: left;
+  		width: 180px;
+	}
+
+	div.gallery:hover 
+	{
+  		border: 1px solid #777;
+	}
+
+	div.gallery img 
+	{
+ 	 	width: 100%;
+  		height: 150px;
+	}
+
+	div.desc 
+	{
+  		padding: 15px;
+  		text-align: center;
 	}
